--- a/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
+++ b/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
@@ -52,6 +52,7 @@
     <Compile Include="RoundedTriangles\IVertex.cs" />
     <Compile Include="RoundedTriangles\IVertexNormal.cs" />
     <Compile Include="RoundedTriangles\IVertexNormalCalculator.cs" />
+    <Compile Include="Vector3D.cs" />
     <Compile Include="VectorDummy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IViewdata.cs" />
