Datenmodell keine Interfaces mehr

--- a/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
+++ b/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
@@ -42,18 +42,16 @@
     <Compile Include="IAlgorithm.cs" />
     <Compile Include="IMeasuredData.cs" />
     <Compile Include="IViewTriangle.cs" />
-    <Compile Include="RoundedTriangles\IEdge.cs" />
+    <Compile Include="RoundedTriangles\Edge.cs" />
     <Compile Include="RoundedTriangles\IEdgeExtractor.cs" />
-    <Compile Include="RoundedTriangles\IEdgeNormal.cs" />
-    <Compile Include="RoundedTriangles\INormalTriangulation.cs" />
     <Compile Include="RoundedTriangles\ISurfaceAreaCalculator.cs" />
-    <Compile Include="RoundedTriangles\ITriangle.cs" />
+    <Compile Include="RoundedTriangles\Triangle.cs" />
     <Compile Include="RoundedTriangles\ITriangleExtractor.cs" />
-    <Compile Include="RoundedTriangles\ITriangulation.cs" />
+    <Compile Include="RoundedTriangles\Triangulation.cs" />
     <Compile Include="RoundedTriangles\ITriangulationRefiner.cs" />
     <Compile Include="RoundedTriangles\ITriangulator.cs" />
-    <Compile Include="RoundedTriangles\IVertex.cs" />
-    <Compile Include="RoundedTriangles\IVertexNormal.cs" />
+    <Compile Include="RoundedTriangles\Vertex.cs" />
+    <Compile Include="RoundedTriangles\VertexNormal.cs" />
     <Compile Include="RoundedTriangles\IVertexNormalCalculator.cs" />
     <Compile Include="Triangle.cs" />
     <Compile Include="Vector3D.cs" />
