TriangulationRefiner fertig, ungetestet

--- a/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
+++ b/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cubic\CubicTriangulationRefiner.cs" />
-    <Compile Include="EditableVertex.cs" />
+    <Compile Include="FaceEditableVertex.cs" />
     <Compile Include="FunctionEdgeTriangle.cs" />
     <Compile Include="Cubic\CubicFunctionEdge.cs" />
     <Compile Include="GenericTriangulationRefiner.cs" />
