--- a/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
+++ b/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TriangulationRefiner</RootNamespace>
     <AssemblyName>TriangulationRefiner.Library</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,7 +35,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -44,10 +44,12 @@
     <Compile Include="FunctionEdgeTriangle.cs" />
     <Compile Include="Cubic\CubicFunctionEdge.cs" />
     <Compile Include="GenericTriangulationRefiner.cs" />
+    <Compile Include="Lazy.cs" />
     <Compile Include="ParameterizedFunctionEdge.cs" />
     <Compile Include="TriangulationRefiner.cs" />
     <Compile Include="FunctionEdge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tuple.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KreuzgewoelbeCore\KreuzgewoelbeCore.csproj">
