bugfixes in refiner

--- a/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
+++ b/Kreuzgewoelbe/TriangulationRefiner.Library/TriangulationRefiner.Library.csproj
@@ -41,9 +41,11 @@
   <ItemGroup>
     <Compile Include="Cubic\CubicTriangulationRefiner.cs" />
     <Compile Include="FaceEditableVertex.cs" />
+    <Compile Include="FaceEditableVertexNormal.cs" />
     <Compile Include="FunctionEdgeTriangle.cs" />
     <Compile Include="Cubic\CubicFunctionEdge.cs" />
     <Compile Include="GenericTriangulationRefiner.cs" />
+    <Compile Include="IEditableVertex.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="ParameterizedFunctionEdge.cs" />
     <Compile Include="TriangulationRefiner.cs" />
