--- a/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
+++ b/Kreuzgewoelbe/KreuzgewoelbeCore/KreuzgewoelbeCore.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MeasuredDataFromCsv.cs" />
+    <Compile Include="RoundedTriangles\FakeTriangulator\Faketringul.cs" />
     <Compile Include="VectorReader.cs" />
     <Compile Include="IAlgorithm.cs" />
     <Compile Include="IMeasuredData.cs" />
